Better background color, no top bar, even spacing, slightly better buttons, and also a js bugfix

--- a/css/ttg.css
+++ b/css/ttg.css
@@ -1,5 +1,5 @@
 body {
-	background-color: lightblue;
+	background-color: #888888;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -9,56 +9,47 @@ body {
 	user-select: none;
 }
 
-#topbar {
-	/*position: absolute;*/
-	left: 0px;
-}
-
 #game {
 	position: absolute;
+	display: flex;
 	left: 0px;
-	top: 32px;
+	top: 0px;
 	right: 0px;
 	bottom: 0px;
 	overflow: hidden;
 }
 
 #leftpanel {
-	position: absolute;
-	left: 0px;
-	top: 0px;
+	height: 100%;
 	width: 33%;
-	bottom: 0px;
-	min-width: 100px;
 	overflow: hidden;
+	padding: 15px 15px;
+	float: left;
 }
 
 #leftCanvas {
 	cursor: pointer;
+	background-color: black;
 }
 
 #middlepanel {
-	position: absolute;
-	left: 30%;
-	padding-left: 3px;
-	padding-top: 3px;
 	margin-right: 15px;
-	top: 0px;
-	right: 318px;
-	bottom: 0px;
-	width: 34%;
+	height: 100%;
+	width: 33%;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	background-color: white;
+	padding: 15px 15px;
+	float: left;
 }
 
 #rightpanel {
 	height: 100%;
-	position: absolute;
-	top: 0px;
-	right: 0px;
+	width: 33%;
 	overflow-x: hidden;
 	overflow-y: scroll;
+	padding: 15px 15px;
+	float: left;
 }
 
 #greeting {
@@ -73,3 +64,10 @@ body {
 	background-color: #fff;
 	cursor: pointer;
 }
+
+.button {
+	width: 100%;
+	height: 30px;
+}
+
+button:focus {outline:0;}
